# duckdb-extension-crice

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake
graalvm-config/: reflect-config.json
src/: circe_extension.cpp
